--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,9 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -430,6 +440,24 @@
     "# analyse tests\n",
     "g = df.groupby(by=\"name\").describe()\n",
     "display(g.sort_values(\"name\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean total execution time of test suite: 67.027s\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = g[('time', 'mean')].sum()\n",
+    "print(\"Mean total execution time of test suite: {}s\".format(sum))"
    ]
   },
   {
