--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,19 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -120,6 +110,7 @@
     "# parse input file an create a nice pandas frame\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import math\n",
     "\n",
     "data = list()\n",
     "with open(\"durations.result\", \"r\") as f:\n",
@@ -140,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +435,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"8\" halign=\"left\">time</th>\n",
+       "      <th>ci95</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>test_connection</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>0.043152</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.0900</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.1525</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.018912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_ns_create</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.356</td>\n",
+       "      <td>0.514397</td>\n",
+       "      <td>8.65</td>\n",
+       "      <td>8.8750</td>\n",
+       "      <td>9.520</td>\n",
+       "      <td>9.8000</td>\n",
+       "      <td>9.88</td>\n",
+       "      <td>0.318827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_ns_delete</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.443</td>\n",
+       "      <td>0.436121</td>\n",
+       "      <td>8.93</td>\n",
+       "      <td>9.1150</td>\n",
+       "      <td>9.395</td>\n",
+       "      <td>9.7575</td>\n",
+       "      <td>10.26</td>\n",
+       "      <td>0.270310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_ns_list</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.561</td>\n",
+       "      <td>0.430076</td>\n",
+       "      <td>9.08</td>\n",
+       "      <td>9.1825</td>\n",
+       "      <td>9.440</td>\n",
+       "      <td>10.0100</td>\n",
+       "      <td>10.09</td>\n",
+       "      <td>0.266564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_ns_show</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.446</td>\n",
+       "      <td>0.443551</td>\n",
+       "      <td>8.83</td>\n",
+       "      <td>9.1425</td>\n",
+       "      <td>9.495</td>\n",
+       "      <td>9.6125</td>\n",
+       "      <td>10.13</td>\n",
+       "      <td>0.274916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_nsd_create</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.521</td>\n",
+       "      <td>0.075785</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.4725</td>\n",
+       "      <td>0.490</td>\n",
+       "      <td>0.5675</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.046972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_nsd_delete</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.532</td>\n",
+       "      <td>0.117170</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.4425</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>0.6000</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.072623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_nsd_list</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.043716</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5150</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>0.5800</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.027096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_nsd_show</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.544</td>\n",
+       "      <td>0.096977</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.4775</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.6125</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.060107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vim_create</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.310</td>\n",
+       "      <td>0.310125</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>1.0700</td>\n",
+       "      <td>1.385</td>\n",
+       "      <td>1.5600</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>0.192218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vim_delete</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.165</td>\n",
+       "      <td>0.331067</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.8850</td>\n",
+       "      <td>1.025</td>\n",
+       "      <td>1.4800</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>0.205198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vim_list</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.585</td>\n",
+       "      <td>0.545878</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>2.3600</td>\n",
+       "      <td>2.685</td>\n",
+       "      <td>3.0200</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>0.338339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vim_show</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.264</td>\n",
+       "      <td>0.378600</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.8750</td>\n",
+       "      <td>1.450</td>\n",
+       "      <td>1.5875</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>0.234659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vnf_list</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.813</td>\n",
+       "      <td>0.486120</td>\n",
+       "      <td>9.24</td>\n",
+       "      <td>9.3375</td>\n",
+       "      <td>9.855</td>\n",
+       "      <td>10.1425</td>\n",
+       "      <td>10.49</td>\n",
+       "      <td>0.301300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vnf_show</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.679</td>\n",
+       "      <td>0.424773</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>9.4575</td>\n",
+       "      <td>9.600</td>\n",
+       "      <td>9.9700</td>\n",
+       "      <td>10.30</td>\n",
+       "      <td>0.263277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vnfd_create</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.248</td>\n",
+       "      <td>0.068443</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.2025</td>\n",
+       "      <td>0.240</td>\n",
+       "      <td>0.2900</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.042421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vnfd_delete</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.236</td>\n",
+       "      <td>0.068670</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.1900</td>\n",
+       "      <td>0.195</td>\n",
+       "      <td>0.2575</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.042562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vnfd_list</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>0.073944</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.3475</td>\n",
+       "      <td>0.410</td>\n",
+       "      <td>0.4800</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.045831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test_vnfd_show</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>0.067363</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.2050</td>\n",
+       "      <td>0.230</td>\n",
+       "      <td>0.2975</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.041752</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  time                                                        \\\n",
+       "                 count   mean       std   min     25%    50%      75%    max   \n",
+       "name                                                                           \n",
+       "test_connection   20.0  0.121  0.043152  0.08  0.0900  0.100   0.1525   0.24   \n",
+       "test_ns_create    10.0  9.356  0.514397  8.65  8.8750  9.520   9.8000   9.88   \n",
+       "test_ns_delete    10.0  9.443  0.436121  8.93  9.1150  9.395   9.7575  10.26   \n",
+       "test_ns_list      10.0  9.561  0.430076  9.08  9.1825  9.440  10.0100  10.09   \n",
+       "test_ns_show      10.0  9.446  0.443551  8.83  9.1425  9.495   9.6125  10.13   \n",
+       "test_nsd_create   10.0  0.521  0.075785  0.44  0.4725  0.490   0.5675   0.67   \n",
+       "test_nsd_delete   10.0  0.532  0.117170  0.39  0.4425  0.545   0.6000   0.76   \n",
+       "test_nsd_list     10.0  0.550  0.043716  0.50  0.5150  0.545   0.5800   0.62   \n",
+       "test_nsd_show     10.0  0.544  0.096977  0.41  0.4775  0.550   0.6125   0.69   \n",
+       "test_vim_create   10.0  1.310  0.310125  0.82  1.0700  1.385   1.5600   1.64   \n",
+       "test_vim_delete   10.0  1.165  0.331067  0.84  0.8850  1.025   1.4800   1.64   \n",
+       "test_vim_list     10.0  2.585  0.545878  1.74  2.3600  2.685   3.0200   3.22   \n",
+       "test_vim_show     10.0  1.264  0.378600  0.77  0.8750  1.450   1.5875   1.63   \n",
+       "test_vnf_list     10.0  9.813  0.486120  9.24  9.3375  9.855  10.1425  10.49   \n",
+       "test_vnf_show     10.0  9.679  0.424773  8.89  9.4575  9.600   9.9700  10.30   \n",
+       "test_vnfd_create  10.0  0.248  0.068443  0.16  0.2025  0.240   0.2900   0.35   \n",
+       "test_vnfd_delete  10.0  0.236  0.068670  0.18  0.1900  0.195   0.2575   0.37   \n",
+       "test_vnfd_list    10.0  0.407  0.073944  0.28  0.3475  0.410   0.4800   0.49   \n",
+       "test_vnfd_show    10.0  0.246  0.067363  0.16  0.2050  0.230   0.2975   0.36   \n",
+       "\n",
+       "                      ci95  \n",
+       "                            \n",
+       "name                        \n",
+       "test_connection   0.018912  \n",
+       "test_ns_create    0.318827  \n",
+       "test_ns_delete    0.270310  \n",
+       "test_ns_list      0.266564  \n",
+       "test_ns_show      0.274916  \n",
+       "test_nsd_create   0.046972  \n",
+       "test_nsd_delete   0.072623  \n",
+       "test_nsd_list     0.027096  \n",
+       "test_nsd_show     0.060107  \n",
+       "test_vim_create   0.192218  \n",
+       "test_vim_delete   0.205198  \n",
+       "test_vim_list     0.338339  \n",
+       "test_vim_show     0.234659  \n",
+       "test_vnf_list     0.301300  \n",
+       "test_vnf_show     0.263277  \n",
+       "test_vnfd_create  0.042421  \n",
+       "test_vnfd_delete  0.042562  \n",
+       "test_vnfd_list    0.045831  \n",
+       "test_vnfd_show    0.041752  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 95% CI: https://stackoverflow.com/questions/53519823/confidence-interval-in-python-dataframe\n",
+    "ci95 = []\n",
+    "for i in g.index:\n",
+    "    count, mean, std, _, _, _, _, _ = g.loc[i]\n",
+    "    ci95.append(1.96 * std / math.sqrt(count))\n",
+    "\n",
+    "g[\"ci95\"] = ci95\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -484,9 +830,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
